--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -11,9 +11,12 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+                
+      - name: Verify working directory
+        run: pwd
 
       - name: Install dependencies
-        run: npm install
+        run: npm install --prefix .
 
       - name: Start server
         run: node server.js
