--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "express": "^4.17.1",
-    "firebase-admin": "^10.2.0"
+    "firebase-admin": "^10.2.0",
+    "nodemailer": "^6.7.2"
   }
 }
